[tool.poetry]
name = "composer-ebuild"
version = "0.1.0"
description = "A tool to generate ebuilds for Composer packages"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "composer_ebuild"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
composer-ebuild = "composer_ebuild.cli:main"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"
max-complexity = 10

[tool.pylint.format]
max-line-length = "100"
