[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composer-ebuild"
version = "0.1.0"
description = "Composer Ebuild Generator aims to create Gentoo Ebuild files from Composer packages."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "setuptools>=75.8.0",
    "requests>=2.32.3",
    "pygithub>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.9"
]

[project.scripts]
composer-ebuild = "composer_ebuild.cli:main"

[tool.setuptools]
packages = ["composer_ebuild"]

[tool.ruff]
line-length = 120
target-version = "py39"
indent-width = 4

[tool.ruff.lint]
# Enable all rules by default, explicitly include I001 to prevent lazy imports
select = ["ALL", "I001"]
ignore = ["D211", "D212", "S603", "TRY300"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.format]
max-line-length = "100"
